# rawvizer

./: .gitattributes  Cargo.toml  tasks.md
src/: app.rs  caps.rs  error.rs  event.rs  file_loader.rs  main.rs  tape.rs
src/event_systems/: event.rs  mod.rs  tape.rs
src/ui/: mod.rs  popups.rs  root.rs  video_player.rs
src/video/: caps.rs  convert.rs  mod.rs
tests/raw-videos/: smpte.rgb8  smpte.v210  snow.rgb8
