[package]
name = "rawvis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
console-subscriber = "0.5.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
image = "0.25.10"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", features = ["crossterm"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.23"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
